# internal/entities/todo_entity.go
@@ -1,13 +1,10 @@
 package entities
 
-import (
-	"time"
-)
+import "gorm.io/gorm"
 
 type Todo struct {
-	ID        string    `json:"id" gorm:"primary_key"`
-	Title     string    `json:"title" gorm:"not null"`
-	Completed bool      `json:"completed" gorm:"not null"`
-	CreatedAt time.Time `json:"created_at" gorm:"not null"`
-	UpdatedAt time.Time `json:"updated_at" gorm:"not null"`
+	ID        string `json:"id" gorm:"primary_key"`
+	Title     string `json:"title" gorm:"not null"`
+	Completed bool   `json:"completed" gorm:"not null"`
+	gorm.Model
 }
